src/tests/snapshots/amber__tests__parsing__modulo_int_expression.ab.snap
---
source: src/tests/parsing.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Raw(
                                        RawFragment {
                                            value: "10",
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "3",
                                        },
                                    ),
                                ),
                                op: Modulo,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "20",
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "6",
                                                    },
                                                ),
                                            ),
                                            op: Modulo,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "3",
                                        },
                                    ),
                                ),
                                op: Modulo,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Arithmetic(
                                                    ArithmeticFragment {
                                                        left: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "100",
                                                                },
                                                            ),
                                                        ),
                                                        right: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "7",
                                                                },
                                                            ),
                                                        ),
                                                        op: Modulo,
                                                        quoted: true,
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "3",
                                                    },
                                                ),
                                            ),
                                            op: Modulo,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "2",
                                        },
                                    ),
                                ),
                                op: Modulo,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
