src/tests/snapshots/amber__tests__parsing__mul_int_expression.ab.snap
---
source: src/tests/parsing.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Raw(
                                        RawFragment {
                                            value: "5",
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "3",
                                        },
                                    ),
                                ),
                                op: Mul,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "2",
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "4",
                                                    },
                                                ),
                                            ),
                                            op: Mul,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "6",
                                        },
                                    ),
                                ),
                                op: Mul,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "echo ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Arithmetic(
                                                    ArithmeticFragment {
                                                        left: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "1",
                                                                },
                                                            ),
                                                        ),
                                                        right: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "2",
                                                                },
                                                            ),
                                                        ),
                                                        op: Mul,
                                                        quoted: true,
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "3",
                                                    },
                                                ),
                                            ),
                                            op: Mul,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "4",
                                        },
                                    ),
                                ),
                                op: Mul,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
